Refactor TaskField value handling for null safety.
Replaced `List.of` with `Arrays.asList` to allow null checks and ensure compatibility. Added a null check for `taskRefValue` to prevent potential `NullPointerException` and return an empty list when it is null. This improves robustness and aligns with safe coding practices.